--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
+}
+body{
+    width: 100%;
+    min-height: 100vh;
+    border: 5px dashed red;
 }
 .header{
     min-height: 100vh;
